again build app with user authentication

--- a/src/Web/FunNotFunApp.Web/appsettings.json
+++ b/src/Web/FunNotFunApp.Web/appsettings.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-FunNotFunApp.Web-F33F3739-E03F-4A2E-82AD-6AAFB28AFBA0;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "FunNotFunAppContextConnection": "Server=(localdb)\\mssqllocaldb;Database=FunNotFunApp.Web;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-FunNotFunApp.Web-A87EF40C-60EC-4E98-9357-408E7E2990FD;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
